--- a/config.json.example
+++ b/config.json.example
@@ -2,5 +2,6 @@
     "clientId": "",
     "guildId": "",
     "token": "",
-    "reminderchannel": ""
+    "reminderchannel": "",
+    "activityText": ""
 }
